LUGG-418 : Fixing whitespace

--- a/css/suitcase.css
+++ b/css/suitcase.css
@@ -1004,6 +1004,11 @@ nav.navigation .secondary-menu>li a.active-trail {
 
 /*////////////////////////////////////*/
 /* Fields */
+.field:not(:last-child),
+.node-biblio .content>div:not(:last-child) {
+    margin-bottom: 10px;
+}
+
 .field.field-name-body {
     overflow: hidden;
 }
@@ -1015,7 +1020,7 @@ nav.navigation .secondary-menu>li a.active-trail {
 
 .field.field-name-field-tags,
 .field.field-name-field-category {
-    margin-top: 10px;
+    /*margin-top: 10px;*/
 }
 
 .field.field-name-field-tags .field-item,
@@ -1049,7 +1054,8 @@ nav.navigation .secondary-menu>li a.active-trail {
     color: #336599;
 }
 
-.field .field-label {
+.field .field-label,
+.node-biblio .content h3 {
     color: #444;
 }
 /*////////////////////////////////////*/
@@ -1502,6 +1508,10 @@ html.js input.form-autocomplete {
 .pager li.pager-next > a:hover,
 .pager li.pager-last > a:hover {
     background: rgba(255,255,255,0.5);
+}
+
+.node-biblio .content>div h3 {
+    margin-bottom: 0;
 }
 
 /*////////////////////////////////////*/
